Added some figures, changed some styling and changed page's name

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@ layout: default
 </div>
 
 <div id="tab-contents">
-  {% include Introduction.html %} {% include Parking.html %} {% include
-  CarOwnership.html %}
+  {% include Introduction.html %}
+  {% include Parking.html %}
+  {% include CarOwnership.html %}
 </div>
 
 <script>
